# lcm-gamepad

./: Makefile.am  README.md  configure.ac  dev-hint.sh
lcmtypes/kinematics/: kinematics_acceleration_t.lcm  kinematics_orientation_t.lcm  kinematics_pose_t.lcm  kinematics_twist_t.lcm
lcmtypes/mx/: mx_joy6_t.lcm  mx_joyButtonNumber_t.lcm
src/: 1804-dualsense.h  dualsense.h  dualshock.h  gamepad.c  gamepad.h  gamepad_argp.h
